<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App info -->
    <string name="app_name">City Guide</string>

    <!-- Navigation Drawer -->
    <string name="title_section1">Home</string>
    <string name="title_section2">Route</string>
    <string name="title_section3">Start</string>

    <!-- Android Actions -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add!</string>
    <string name="action_website">Website here!</string>
    <string name="action_currentlocation">Your current location..</string>
    <string name="action_addlocation">Add a new location!</string>
    <string name="action_search">Search a location!</string>
    <string name="action_loading_title">Loading!</string>
    <string name="action_loading">Hold on, loading!</string>

    <!-- Toast Messages -->
    <string name="toast_added">Added the item: </string>
    <string name="toast_found">Found Items: </string>
    <string name="toast_full">List hit the 8 limit</string>
    <string name="toast_removed">Removed the item</string>

    <!-- Android Errors -->
    <string name="gps_not_found">We didn\'t find a gps location.
    We\'ll use the center point of Amsterdam instead.</string>

    <!-- Activity Names -->
    <string name="title_activity_sub_category">Subcategories</string>
    <string name="title_activity_view_activities">Pick an activity</string>
    <string name="title_activity_view">View your activity</string>
    <string name="title_activity_test_search_view">Search for a destination</string>
    <string name="title_activity_route">Route</string>
    <string name="title_activity_category_list">Category</string>

    <string name="category">Category</string>
    <string name="nearby">Nearby</string>
    <string name="top10">Top 10 locations</string>

    <!-- (Sub) Category Names -->
    <!-- Activities -->
    <string name="cat_activities">Activities</string>
    <string name="sub_arrangement">Arrangement</string>
    <string name="sub_excercion">Excursion</string>
    <string name="sub_guidedtour">Guided Tour</string>

    <!-- Attractions -->
    <string name="cat_attractions">Attractions</string>
    <string name="sub_architecture">Architecture</string>
    <string name="sub_attraction">Attraction</string>
    <string name="sub_outside">Open Air</string>
    <string name="sub_wellness">Wellness</string>
    <string name="sub_museums">Museum</string>

    <!-- Food and Drinks -->
    <string name="cat_foodandrinks">Food and drinks</string>
    <string name="sub_brasserie">Brasserie</string>
    <string name="sub_eatery">Pub or cafe</string>
    <string name="sub_restaurant">Restaurant</string>

    <!-- Gallery -->
    <string name="cat_museum">Museum and Gallery</string>
    <string name="sub_gallery">Gallery</string>
    <string name="sub_exhibition">Exhibition</string>

    <!-- Cabaret -->
    <string name="cat_cabaret">Show</string>
    <string name="sub_youththeater">Theater for youth</string>
    <string name="sub_theater">Theater</string>
    <string name="sub_dance">Dance and Music</string>

    <!-- Nightlife -->
    <string name="cat_night">Nightlife</string>
    <string name="sub_cafe">Cafe</string>
    <string name="sub_nightclub">Nightclub</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_world">Hello world!</string>
    <!-- Settings Screen -->

    <string name="settings_language" translatable="false">Language</string>
    <string name="settings_language_hint" translatable="false">Change the language!</string>

    <string-array name="languages">
        <item></item>
        <item>English</item>
        <item>Dutch</item>
    </string-array>

    <string name="settings_notifications">Notifications</string>
    <string name="settings_notifications_hint">Turn on/off smartwatch notifications!</string>

    <string name="settings_travel">Travel Method</string>
    <string name="settings_travel_hint">Change your travel method!</string>

    <string-array name="travel">
        <item></item>
        <item>On Foot</item>
        <item>Public Transport</item>
        <item>Car</item>
    </string-array>

    <string name="settings_time">Time Left</string>
    <string name="settings_time_hint">Buy more time!</string>

    <string-array name="time">
        <item></item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>1 week</item>
    </string-array>

    <!-- Context Menu -->
    <string name="hold_current">This is where you are at this moment.</string>
    <string-array name="hold_current">
        <item>Return</item>
    </string-array>

    <string-array name="hold_location">
        <item>Delete Location</item>
        <item>View Location</item>
    </string-array>

    <string-array name="hold_add">
        <item>Add Location</item>
    </string-array>
    <string name="hold_add">Add a location!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="user_location">You are here!</string>
    <string name="action_route">Switch RouteView</string>
    <string name="drawer_open" translatable="false">Open Navigation Drawer!</string>
    <string name="drawer_close" translatable="false">Close Navigation Drawer!</string>
    <string name="tab_name">Name</string>
    <string name="tab_dist">Distance</string>
    <string name="tab_rate">Rating</string>
    <string name="action_send">Route has been sent to your smartwatch!</string>
    <string name="action_send_title">Sending Route</string>
    <string name="no_calender">Opening times are currently unavailable.</string>

</resources>
