<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015.
  ~ Created by Lansenou on 25/05/15 22:40
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_gray"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lighter_gray"
        android:divider="@color/divider"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:queryHint="@string/action_search" />

    <ListView
        android:id="@+id/searchListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divider"
        android:dividerHeight="2dp"
        android:layout_below="@+id/tabHost" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divider"
        android:dividerHeight="2dp"
        android:layout_below="@+id/tabHost" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost"
        android:layout_below="@+id/searchView">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/radioGroup"
            android:layout_margin="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_name"
                android:id="@+id/radioButton1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_dist"
                android:id="@+id/radioButton2"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_rate"
                android:id="@+id/radioButton3"/>
        </RadioGroup>



    </LinearLayout>

</RelativeLayout>