<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_language"
            android:id="@+id/language"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/languagespinner"
            android:layout_toStartOf="@id/languagespinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_language_hint"
            android:id="@+id/languagesub"
            android:layout_below="@+id/language"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/languagespinner"
            android:layout_toStartOf="@id/languagespinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/languagespinner"
            android:gravity="end"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/language"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_notifications"
            android:id="@+id/notifications"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/notificationswitch"
            android:layout_toStartOf="@id/notificationswitch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_notifications_hint"
            android:id="@+id/notificationssub"
            android:layout_below="@+id/notifications"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/notificationswitch"
            android:layout_toStartOf="@id/notificationswitch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Switch
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/notificationswitch"
            android:textOn="On"
            android:textOff="Off"
            android:checked="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="18sp"
            android:gravity="end"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_travel"
            android:id="@+id/travelmethod"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/travelmethodspinner"
            android:layout_toStartOf="@id/travelmethodspinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_travel_hint"
            android:id="@+id/travelmethodsub"
            android:layout_below="@+id/travelmethod"
            android:layout_alignLeft="@+id/travelmethod"
            android:layout_alignStart="@id/travelmethod"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/travelmethodspinner"
            android:layout_toStartOf="@id/travelmethodspinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/travelmethodspinner"
            android:layout_alignTop="@+id/travelmethod"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/settings_time"
            android:id="@+id/timeleft"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/timeleftspinner"
            android:layout_toStartOf="@id/timeleftspinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/settings_time_hint"
            android:id="@+id/timeleftsub"
            android:layout_below="@+id/timeleft"
            android:layout_alignLeft="@+id/timeleft"
            android:layout_alignStart="@id/timeleftspinner"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toLeftOf="@+id/timeleftspinner"
            android:layout_toStartOf="@id/timeleftspinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/timeleftspinner"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>